--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
-                <div class="ibox-title modified">
+                <div class="ibox-title modified week-inputs-container">
                     <div class="week-input-container">
                         <button class="btn btn-white btn-left" type="button"><i class="fa fa-arrow-left" aria-hidden="true"></i></button>
     				    <input id="week_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
