--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -14,11 +14,11 @@
                 </div>
                 <div class="ibox-content">
                     {include ajax-loading}
-                    <table class="table table-striped table-bordered table-hover" id="personsTable" style="display: none;">
+                    <table class="table table-striped table-bordered table-hover" id="personsTable" style="display: none;" data-paging="false">
                         <thead>
                             <tr>
                                 <th class="wide noselect" data-sorted="true" data-direction="ASC">Jméno</th>
-                                <th class="noselect" data-name="center" >Centrum</th>
+                                <th class="noselect" data-name="center">Centrum</th>
                                 <th data-filterable="false" class="noselect th-small" data-type="html">Aktivní</th>
                                 <th data-filterable="false" data-sortable="false" data-name="controls" class="controls"></th>
                                 <th data-breakpoints="all"></th>
