--- a/app/templates/Center/list.latte
+++ b/app/templates/Center/list.latte
@@ -1,7 +1,7 @@
 {layout 'layout.latte'}
 {block head}
     <!-- FooTable -->
-    <link href="{$basePath}/css/plugins/footable/footable.core.css" rel="stylesheet">
+    <link href="{$basePath}/css/plugins/footable/footable.bootstrap.min.css" rel="stylesheet">
 
     <!-- Sweet Alert -->
     <link href="{$basePath}/css/plugins/sweetalert/sweetalert.css" rel="stylesheet">
@@ -13,20 +13,21 @@
                 <div class="ibox-title empty">
                 </div>
                 <div class="ibox-content">
-                    <table class="table table-striped table-bordered table-hover" id="centersTable" data-page-size="20" >
+                    {include ajax-loading}
+                    <table class="table table-striped table-bordered table-hover" id="centersTable" style="display: none;" data-paging="false">
                         <thead>
                             <tr>
                                 <th class="wide noselect">Název</th>
                                 <th class="noselect">Zkratka</th>
-                                <th class="noselect">Stát</th>
-                                <th data-sort-ignore="true" data-name="controls" class="controls"></th>
+                                <th class="noselect" data-name="country">Stát</th>
+                                <th data-filterable="false" data-sortable="false" class="controls"></th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr n:foreach="$records as $record">
-                                <td>{$record->title}</td>
+                                <td data-sort-value="{$record->title|webalize}">{$record->title}</td>
                                 <td>{$record->abbreviation}</td>
-                                <td>{$record->country->abbreviation}</td>
+                                <td data-filter-value="{$record->country->id}">{$record->country->abbreviation}</td>
                                 <td class="controls">
                                     <a class="row-edit" n:href="edit, $record->id"><span class="glyphicon glyphicon-edit"></span></a>
                                     <a class="row-delete" data-delete_name="{$record->title}" n:href="delete, $record->id"><span class="glyphicon glyphicon-remove"></span></a>
@@ -47,8 +48,8 @@
     </div>
 {/block}
 {block scripts}
-    <!-- FooTable --> 
-    <script src="{$basePath}/js/plugins/footable/footable.all.min.js"></script>    
+    <!-- FooTable -->
+    <script src="{$basePath}/js/plugins/footable2/footable.min.js"></script>    
     
     <!-- Sweet alert -->
     <script src="{$basePath}/js/plugins/sweetalert/sweetalert.min.js"></script>
@@ -56,7 +57,10 @@
     <!-- Page-Level Scripts -->
     <script>
         $(document).ready(function() {
+            FooTable.CountryFiltering = createFooTableFilter('country', 'Všechny země', {php echo json_encode($countries)});
+            FooTable.components.register('filtering', FooTable.CountryFiltering);
             initFooTable('#centersTable');
+            $('#main_loading').fadeOut();
         });
     </script>
 {/block}
