--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -66,6 +66,9 @@
     <!-- Sweet alert -->
     <script src="{$basePath}/js/plugins/sweetalert/sweetalert.min.js"></script>
 
+    <!-- ChartJS-->
+    <script src="{$basePath}/js/plugins/chartJs/Chart.min.js"></script>
+    
     <!-- Page-Level Scripts -->
     <script> 
         $(document).ready(function() {
