--- a/app/templates/Person/list.latte
+++ b/app/templates/Person/list.latte
@@ -13,7 +13,7 @@
                 <div class="ibox-title empty">
                 </div>
                 <div class="ibox-content">
-	               	<canvas id="distribution_chart_test" height="120"></canvas>
+	               	{*<canvas id="distribution_chart_test" height="120"></canvas>*}
                     {include ajax-loading}
                     <table class="table table-striped table-bordered table-hover" id="personsTable" style="display: none;" data-paging="false">
                         <thead>
@@ -85,17 +85,15 @@
         function change_person_activity(person_id, active) {
             $.get({link setPersonActivity!}, {'person_id': person_id, 'active': active})
         }
-        
+        {*
         var ctx = $("#distribution_chart_test");
-        var color = Chart.helpers.color;
         var myChart = new Chart($(ctx), {
 		    type: 'bar',
 		    data: {
-			    yLabels: ["100", "200", "300", "400", "500", "800", "1300", "2000", "4000"],
 		        xLabels: {$x_axis},
 		        datasets: [{
 		            label: "Sankírtan dás",
-		            data: [18.5, 12, 37, 14, 46, 58, 95, 74, 55, 187, 110, 127, 348.5, 105, 191, 78, 103, 69, 40, 174, 155, 90, 73, 129, 59, 81, 50, 319, 67, 62, 23, 15, 549, 26.5, 74, 3, 3, 42, 401.25, 39, 43, 14.5, 83, 164.5, 52, 590, 17, 5, 52.25, 160.25, 35.25, 37, 31.5, 228, 1, 16, 28.5, 213.25, 167.25, 134, 121, 281, 26, 62, 149, 50, 1889, 3, 10, 8, 75, 125, 134, 150, 286, 123, 119, 14, 28, 102, 100, 201, 14, 97, 10, 130, 151, 31, 140.5, 204.25, 176.5, 212, 31, 11, 133, 124, 150, 132, 26, 34, 333, 18, 45],
+		            data: {$x_data},
 		            backgroundColor: "#63be7b",
 					borderColor: '#1ab394',
 		            borderWidth: 1,		            
@@ -131,5 +129,6 @@
             	}
 		    }
 		});
+        *}
     </script>
 {/block}
