--- a/app/templates/Person/test.latte
+++ b/app/templates/Person/test.latte
@@ -25,48 +25,64 @@
     
     <!-- Page-Level Scripts -->
     <script> 
+        Chart.Tooltip.positioners.custom = function(elements, eventPosition) {       
+            return {
+                x: elements[0]._view.x,
+                y: elements[0]._chart.chartArea.bottom
+            };
+        }
+
         var ctx = $("#distribution_chart_test");
-        var myChart = new Chart($(ctx), {
-		    type: 'bar',
-		    data: {
-		        xLabels: {$x_axis},
-		        datasets: [{
-		            label: {$person->name},
-		            data: {$x_data},
-		            backgroundColor: "#63be7b",
-					borderColor: '#1ab394',
-		            borderWidth: 1,		            
-		        }]
-		    },
-		    options: {
-		        scales: {
-		            yAxes: [{
-			            type: 'linear',
-		                ticks: {
-		                    beginAtZero: true,
-		                    max: 2500,
-		                },	
-		                scaleLabel: {
-					        display: true,
-					        labelString: 'book points'
-					    },	
-		            }]
-		        },
-		        tooltips: {
-			        mode: 'index',
+        var options = {
+            type: 'bar',
+            data: {
+                xLabels: {$weeks_chart_data['x_data_weeks'] ?: []},
+                datasets: [{
+                    label: {$person->name},
+                    data: {$weeks_chart_data['y_data_points'] ?: []},
+                    backgroundColor: "#63be7b",
+                    borderColor: '#1ab394',            
+                }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        type: 'linear',
+                        ticks: {
+                            beginAtZero: true,
+                            max: 1300,
+                        },  
+                        scaleLabel: {
+                            display: true,
+                            labelString: 'book points'
+                        },  
+                    }]
+                },
+                tooltips: {
+                    mode: 'index',
                     intersect: false,
-            		callbacks: {
-                		title: function(tooltipItem, data){
-	                		var xLabel = tooltipItem[0].xLabel
-	                		var xLabel_parts = xLabel.split("/");
-                    		return "Rok " + xLabel_parts[0] + " - " + mesic[xLabel_parts[1]-1];
-                    	},
-                    	label: function(tooltipItem, data) {
-			                return " " + tooltipItem.yLabel + " bodů";
-			            }
-                	}
-            	}
-		    }
-		});
+                    xAlign: 'center',
+                    yAlign: 'top',
+                    position: 'custom',
+                    callbacks: {
+                        title: function(tooltipItem, data){
+                            var xLabel = tooltipItem[0].xLabel
+                            var xLabel_parts = xLabel.split("/");
+                            return "Rok " + xLabel_parts[0] + " - týden " + xLabel_parts[1];
+                        },
+                        label: function(tooltipItem, data) {
+                            return " " + tooltipItem.yLabel + " bodů";
+                        }
+                    }
+                }
+            }
+        };
+
+        var weeksChart = new Chart($(ctx), options);
+        var padding_bottom = 50 - (weeksChart.height - weeksChart.chartArea.bottom);
+        weeksChart.destroy();
+        options.options.layout.padding.bottom = padding_bottom;
+        weeksChart = new Chart($(ctx), options);
+        
     </script>
 {/block}
